--- a/list.html
+++ b/list.html
@@ -2,13 +2,14 @@
 <html lang="zh-CN">
 <head>
 <meta charset="utf-8">
-<title>首页-橙汁园餐厅</title>
+<title>商品列表-橙汁园餐厅</title>
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" >  
 <link rel="stylesheet" href="res/css/bootstrap4.min.css" >
 <link rel="stylesheet" href="res/css/zico.min.css" >
 <script src="res/js/jquery-3.2.1.min.js" ></script>
 <script src="res/js/bootstrap4.min.js" ></script>
 <link rel="stylesheet" href="style/global.css" >
+<script type="text/javascript" src="style/js/jquery.imagezoom.min.js"></script>
 </head>
 <body>
 <div class="mytop">
@@ -54,73 +55,19 @@
     </ul>
   </div>
  </nav>
-<div id="carouselExampleIndicators" class="carousel slide ibanner" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item ibanner01 active">
-    </div>
-    <div class="carousel-item ibanner02">
-    </div>
-    <div class="carousel-item ibanner03">
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
 </div> 
 <!--ihero end-->
 
-<div class="container-xl ihome_list">
-<div class="ititle">
-<div class="ititle01"><i class="zi zi_star"></i> 今日新品</div>
-<a href="list.html">更多&gt;&gt;</a>
-</div>
-<div class="ihome_list_box">
-<ul class="row">
-<li class="col-md-3 col-6">
-<a href="item.html">
-<img src="style/images/foods_01.jpg" alt="item.html" /></a>
-<p><em>￥10.00</em><del>37.00</del> <span>67人付款</span></p>
-<a href="item.html">回锅肉炒西芹</a>
-</li>
-<li class="col-md-3 col-6">
-<a href="item.html">
-<img src="style/images/foods_01.jpg" alt="item.html" /></a>
-<p><em>￥10.00</em><del>37.00</del> <span>67人付款</span></p>
-<a href="item.html">回锅肉炒西芹</a>
-</li>
-<li class="col-md-3 col-6">
-<a href="item.html">
-<img src="style/images/foods_01.jpg" alt="item.html" /></a>
-<p><em>￥10.00</em><del>37.00</del> <span>67人付款</span></p>
-<a href="item.html">回锅肉炒西芹</a>
-</li>
-<li class="col-md-3 col-6">
-<a href="item.html">
-<img src="style/images/foods_01.jpg" alt="item.html" /></a>
-<p><em>￥10.00</em><del>37.00</del> <span>67人付款</span></p>
-<a href="item.html">回锅肉炒西芹</a>
-</li>
-</ul>
-</div>
-</div>
-<!--list 01 end-->
+<nav aria-label="breadcrumb" class="container-xl mysite">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><a href="#">首页</a></li>
+    <li class="breadcrumb-item"><a href="#">商品列表</a></li>
+    <li class="breadcrumb-item active" aria-current="page">商品列表</li>
+  </ol>
+</nav>
+<!--breadcrumb end-->
 
 <div class="container-xl">
-<div class="ititle">
-<div class="ititle02"><i class="zi zi_tmHotjar"></i> 今日新品</div>
-<a href="list.html">更多&gt;&gt;</a>
-</div>
 <div class="ihome_list_box">
 <ul class="row">
 <li class="col-md-3 col-6">
@@ -147,44 +94,102 @@
 <p><em>￥10.00</em><del>37.00</del> <span>67人付款</span></p>
 <a href="item.html">回锅肉炒西芹</a>
 </li>
+<li class="col-md-3 col-6">
+<a href="item.html">
+<img src="style/images/foods_01.jpg" alt="item.html" /></a>
+<p><em>￥10.00</em><del>37.00</del> <span>67人付款</span></p>
+<a href="item.html">回锅肉炒西芹</a>
+</li>
+<li class="col-md-3 col-6">
+<a href="item.html">
+<img src="style/images/foods_01.jpg" alt="item.html" /></a>
+<p><em>￥10.00</em><del>37.00</del> <span>67人付款</span></p>
+<a href="item.html">回锅肉炒西芹</a>
+</li>
+<li class="col-md-3 col-6">
+<a href="item.html">
+<img src="style/images/foods_01.jpg" alt="item.html" /></a>
+<p><em>￥10.00</em><del>37.00</del> <span>67人付款</span></p>
+<a href="item.html">回锅肉炒西芹</a>
+</li>
+<li class="col-md-3 col-6">
+<a href="item.html">
+<img src="style/images/foods_01.jpg" alt="item.html" /></a>
+<p><em>￥10.00</em><del>37.00</del> <span>67人付款</span></p>
+<a href="item.html">回锅肉炒西芹</a>
+</li>
+<li class="col-md-3 col-6">
+<a href="item.html">
+<img src="style/images/foods_01.jpg" alt="item.html" /></a>
+<p><em>￥10.00</em><del>37.00</del> <span>67人付款</span></p>
+<a href="item.html">回锅肉炒西芹</a>
+</li>
+<li class="col-md-3 col-6">
+<a href="item.html">
+<img src="style/images/foods_01.jpg" alt="item.html" /></a>
+<p><em>￥10.00</em><del>37.00</del> <span>67人付款</span></p>
+<a href="item.html">回锅肉炒西芹</a>
+</li>
+<li class="col-md-3 col-6">
+<a href="item.html">
+<img src="style/images/foods_01.jpg" alt="item.html" /></a>
+<p><em>￥10.00</em><del>37.00</del> <span>67人付款</span></p>
+<a href="item.html">回锅肉炒西芹</a>
+</li>
+<li class="col-md-3 col-6">
+<a href="item.html">
+<img src="style/images/foods_01.jpg" alt="item.html" /></a>
+<p><em>￥10.00</em><del>37.00</del> <span>67人付款</span></p>
+<a href="item.html">回锅肉炒西芹</a>
+</li>
+<li class="col-md-3 col-6">
+<a href="item.html">
+<img src="style/images/foods_01.jpg" alt="item.html" /></a>
+<p><em>￥10.00</em><del>37.00</del> <span>67人付款</span></p>
+<a href="item.html">回锅肉炒西芹</a>
+</li>
+<li class="col-md-3 col-6">
+<a href="item.html">
+<img src="style/images/foods_01.jpg" alt="item.html" /></a>
+<p><em>￥10.00</em><del>37.00</del> <span>67人付款</span></p>
+<a href="item.html">回锅肉炒西芹</a>
+</li>
+<li class="col-md-3 col-6">
+<a href="item.html">
+<img src="style/images/foods_01.jpg" alt="item.html" /></a>
+<p><em>￥10.00</em><del>37.00</del> <span>67人付款</span></p>
+<a href="item.html">回锅肉炒西芹</a>
+</li>
+<li class="col-md-3 col-6">
+<a href="item.html">
+<img src="style/images/foods_01.jpg" alt="item.html" /></a>
+<p><em>￥10.00</em><del>37.00</del> <span>67人付款</span></p>
+<a href="item.html">回锅肉炒西芹</a>
+</li>
 </ul>
 </div>
+<nav aria-label="Page navigation" class="mt-2">
+  <ul class="pagination  pagination-lg justify-content-center">
+    <li class="page-item">
+      <a class="page-link" href="#" aria-label="Previous">
+        <span aria-hidden="true">&laquo;</span>
+        <span class="sr-only">Previous</span>
+      </a>
+    </li>
+    <li class="page-item"><a class="page-link" href="#">1</a></li>
+    <li class="page-item"><a class="page-link" href="#">2</a></li>
+    <li class="page-item"><a class="page-link" href="#">3</a></li>
+    <li class="page-item">
+      <a class="page-link" href="#" aria-label="Next">
+        <span aria-hidden="true">&raquo;</span>
+        <span class="sr-only">Next</span>
+      </a>
+    </li>
+  </ul>
+</nav>
 </div>
 
-<div class="container-xl">
-<div class="ititle">
-<div class="ititle03"><i class="zi zi_digg"></i> 今日新品</div>
-<a href="list.html">更多&gt;&gt;</a>
-</div>
-<div class="ihome_list_box">
-<ul class="row">
-<li class="col-md-3 col-6">
-<a href="item.html">
-<img src="style/images/foods_01.jpg" alt="item.html" /></a>
-<p><em>￥10.00</em><del>37.00</del> <span>67人付款</span></p>
-<a href="item.html">回锅肉炒西芹</a>
-</li>
-<li class="col-md-3 col-6">
-<a href="item.html">
-<img src="style/images/foods_01.jpg" alt="item.html" /></a>
-<p><em>￥10.00</em><del>37.00</del> <span>67人付款</span></p>
-<a href="item.html">回锅肉炒西芹</a>
-</li>
-<li class="col-md-3 col-6">
-<a href="item.html">
-<img src="style/images/foods_01.jpg" alt="item.html" /></a>
-<p><em>￥10.00</em><del>37.00</del> <span>67人付款</span></p>
-<a href="item.html">回锅肉炒西芹</a>
-</li>
-<li class="col-md-3 col-6">
-<a href="item.html">
-<img src="style/images/foods_01.jpg" alt="item.html" /></a>
-<p><em>￥10.00</em><del>37.00</del> <span>67人付款</span></p>
-<a href="item.html">回锅肉炒西芹</a>
-</li>
-</ul>
-</div>
-</div>
+
 
 <footer>
 <div class="container-xl">
@@ -194,9 +199,23 @@
 </p>
 </div>
 </footer>
-
 <script>
-
+	function commentAnchor() { $("html,body").animate({ scrollTop: $("#iframe_comm").offset().top - 100 }, 300); }
+    function IfrAutoHeight() {
+        var $ifr = $("#comm_ifr");
+        $ifr.height($ifr.contents().height());
+    }
+ 
+</script>
+<script>
+$(document).ready(function(){
+	$(".jqzoom").imagezoom();
+	$("#thumblist li a").click(function(){
+		$(this).parents("li").addClass("tb-selected").siblings().removeClass("tb-selected");
+		$(".jqzoom").attr('src',$(this).find("img").attr("mid"));
+		$(".jqzoom").attr('rel',$(this).find("img").attr("big"));
+	});
+});
 </script>
 </body>
 </html>
