--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
 <div class="container-xl">
 <div class="ititle">
-<div class="ititle02"><i class="zi zi_tmHotjar"></i> 今日新品</div>
+<div class="ititle02"><i class="zi zi_tmHotjar"></i> 热门订单</div>
 <a href="list.html">更多&gt;&gt;</a>
 </div>
 <div class="ihome_list_box">
@@ -153,10 +153,18 @@
 
 <div class="container-xl">
 <div class="ititle">
-<div class="ititle03"><i class="zi zi_digg"></i> 今日新品</div>
+<div class="ititle03"><i class="zi zi_digg"></i> 活动推介</div>
 <a href="list.html">更多&gt;&gt;</a>
 </div>
-<div class="ihome_list_box">
+<ul class="nav nav-tabs mt-2" id="myTab" role="tablist">
+  <li class="nav-item"><a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">限时秒杀</a></li>
+  <li class="nav-item"><a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">拼团</a></li>
+  <li class="nav-item"><a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">特惠</a></li>
+  <li class="nav-item"><a class="nav-link" id="contact-tab2" data-toggle="tab" href="#contact2" role="tab" aria-controls="contact2" aria-selected="false">热门排行</a></li>
+</ul>
+<div class="tab-content" id="myTabContent">
+  <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+  <div class="ihome_list_box">
 <ul class="row">
 <li class="col-md-3 col-6">
 <a href="item.html">
@@ -184,6 +192,103 @@
 </li>
 </ul>
 </div>
+  </div>
+  <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+  <div class="ihome_list_box">
+<ul class="row">
+<li class="col-md-3 col-6">
+<a href="item.html">
+<img src="style/images/foods_10.jpg" alt="item.html" /></a>
+<p><em>￥10.00</em><del>37.00</del> <span>67人付款</span></p>
+<a href="item.html">肉丝面销魂套装</a>
+</li>
+<li class="col-md-3 col-6">
+<a href="item.html">
+<img src="style/images/foods_10.jpg" alt="item.html" /></a>
+<p><em>￥10.00</em><del>37.00</del> <span>67人付款</span></p>
+<a href="item.html">回锅肉炒西芹</a>
+</li>
+<li class="col-md-3 col-6">
+<a href="item.html">
+<img src="style/images/foods_10.jpg" alt="item.html" /></a>
+<p><em>￥10.00</em><del>37.00</del> <span>67人付款</span></p>
+<a href="item.html">回锅肉炒西芹</a>
+</li>
+<li class="col-md-3 col-6">
+<a href="item.html">
+<img src="style/images/foods_10.jpg" alt="item.html" /></a>
+<p><em>￥10.00</em><del>37.00</del> <span>67人付款</span></p>
+<a href="item.html">回锅肉炒西芹</a>
+</li>
+</ul>
+</div>
+  </div>
+  <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
+  <div class="ihome_list_box">
+<ul class="row">
+<li class="col-md-3 col-6">
+<a href="item.html">
+<img src="style/images/foods_12.jpg" alt="item.html" /></a>
+<p><em>￥10.00</em><del>37.00</del> <span>67人付款</span></p>
+<a href="item.html">清炒黑木耳花生米</a>
+</li>
+<li class="col-md-3 col-6">
+<a href="item.html">
+<img src="style/images/foods_12.jpg" alt="item.html" /></a>
+<p><em>￥10.00</em><del>37.00</del> <span>67人付款</span></p>
+<a href="item.html">回锅肉炒西芹</a>
+</li>
+<li class="col-md-3 col-6">
+<a href="item.html">
+<img src="style/images/foods_12.jpg" alt="item.html" /></a>
+<p><em>￥10.00</em><del>37.00</del> <span>67人付款</span></p>
+<a href="item.html">回锅肉炒西芹</a>
+</li>
+<li class="col-md-3 col-6">
+<a href="item.html">
+<img src="style/images/foods_12.jpg" alt="item.html" /></a>
+<p><em>￥10.00</em><del>37.00</del> <span>67人付款</span></p>
+<a href="item.html">回锅肉炒西芹</a>
+</li>
+</ul>
+</div>
+  
+  </div>
+  <div class="tab-pane fade" id="contact2" role="tabpanel" aria-labelledby="contact2-tab">
+  <div class="ihome_list_box">
+<ul class="row">
+<li class="col-md-3 col-6">
+<a href="item.html">
+<img src="style/images/foods_15.jpg" alt="item.html" /></a>
+<p><em>￥10.00</em><del>37.00</del> <span>67人付款</span></p>
+<a href="item.html">西红杮炒蛋土豪套餐</a>
+</li>
+<li class="col-md-3 col-6">
+<a href="item.html">
+<img src="style/images/foods_15.jpg" alt="item.html" /></a>
+<p><em>￥10.00</em><del>37.00</del> <span>67人付款</span></p>
+<a href="item.html">回锅肉炒西芹</a>
+</li>
+<li class="col-md-3 col-6">
+<a href="item.html">
+<img src="style/images/foods_15.jpg" alt="item.html" /></a>
+<p><em>￥10.00</em><del>37.00</del> <span>67人付款</span></p>
+<a href="item.html">回锅肉炒西芹</a>
+</li>
+<li class="col-md-3 col-6">
+<a href="item.html">
+<img src="style/images/foods_15.jpg" alt="item.html" /></a>
+<p><em>￥10.00</em><del>37.00</del> <span>67人付款</span></p>
+<a href="item.html">回锅肉炒西芹</a>
+</li>
+</ul>
+</div>
+  </div>
+</div>
+
+
+
+
 </div>
 
 <footer>
