--- a/item.html
+++ b/item.html
@@ -109,14 +109,18 @@ if(jsonstr.length>0)
 </div>
 <div class="col-md-7 col-12">
 <h1>回锅肉炒西芹片</h1>
-<form id="form" name="form" method="post" action="/Cart/Cart" style="margin-bottom:10px;">
+<form id="form" name="form" method="post" action="/Cart/Cart">
 <input name="id" type="hidden" id="id" value="56">
 <ul class="list-group con_shop_list">
-  <li class="list-group-item">编号<span>212018031200009</span></li>
-  <li class="list-group-item">品牌<span>0</span></li>
-  <li class="list-group-item">库存<span>10</span></li>
-  <li class="list-group-item">市场价<span><s>1852.00 元</s></span></li>
-  <li class="list-group-item">零售价<span style="font-size:1.46rem; font-weight:bold; color:#f40;"><i class="zi zi_yensign"></i> 1580.00元</span></li>
+  <li class="list-group-item">优惠活动：11:30-14:30点餐7折</li>
+  <li class="list-group-item">促销价<span style="font-size:1.46rem; font-weight:bold; color:#f40;"><i class="zi zi_yensign"></i> 1580.00元</span></li>
+  <li class="list-group-item">原价<span><s>1852.00 元</s></span></li>
+  <li class="list-group-item">累计销量：1320份</li>
+  <p>
+  “西湖醋鱼”是杭州名菜中的看家菜。如今烹制西湖醋鱼最为有名的是孤山南麓的百年老店“楼外楼”。西湖醋鱼，又称"叔嫂传珍"，传说是古时嫂嫂给小叔烧过一碗加糖加醋的鱼而来的。选用体态适中的草鱼，最好先在清水氽熟，要掌握火候。装盘后淋上糖醋芡汁。成菜色泽红亮，肉质鲜嫩，酸甜可口，略带蟹味。
+  </p>
+  
+  
   <li class="list-group-item">购买数量<div class="input-group con_shop_nums">
 <div class="input-group-prepend">
 <span class="input-group-text bg-danger"><i class="zi zi_minus" onclick="Product.minus();"></i></span>
