--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 </div>
 </div>
 
-<div class="container-xl">
+<div class="container-xl ihome_list">
 <div class="ititle">
 <div class="ititle03"><i class="zi zi_digg"></i> 活动推介</div>
 <a href="list.html">更多&gt;&gt;</a>
